cmake_minimum_required(VERSION 3.22)
project(C_C___DataStructure_Algorithmus)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_C___DataStructure_Algorithmus main.cpp LinkedListC.hpp DynamicArrayC.hpp Sort.cpp Sort.h BinaryTree.cpp BinaryTree.h RedBlackTree.cpp RedBlackTree.h DynamicArray.cpp DynamicArray.h)
